@@ -1,0 +1,3 @@
+Set upstream metadata fields: Bug-Database, Homepage, Name, Repository.
+Certainty: certain
+Fixed-Lintian-Tags: upstream-metadata-file-is-missing
