@@ -1,0 +1,4 @@
+Name: Blah-Blieh
+Bug-Database: https://github.com/example/Blah/issues
+Homepage: https://github.com/example/Blah
+Repository: https://github.com/example/Blah.git
